# rag_prod

./: document_loaders.py  main.py  pyproject.toml  text_splitters.py
.aw_docs/: config.json
chromadb/: app.py
rag_pipeline/: app.py
vector_store/: app.py
